# vscode

./: .bash_stdlib_cache.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .vale.ini  AGENTS.md  CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  test1.sh  tsconfig.json  verify_hover.js  verify_hover.js.map
.cicd-tools/configuration/: changelog.json
.github/config/actions/: github-action-markdown-link-check.json
.github/config/workflows/: workflow-push.json
.github/scripts/: job-50-test-precommit.sh  step-setup-environment.sh
.github/workflows/: workflow-push.yml
.vale/Vocab/bash-stdlib/: accept.txt
src/: constants.ts  debug.ts  extension.ts  triggers.ts
src/providers/: completionProvider.ts  hoverProvider.ts  linterProvider.ts
src/providers/completion/: mocks.ts  namespaces.ts
src/providers/test/: completionProvider.test.ts  hoverProvider.test.ts  linterProvider.test.ts
src/shell/: completion.ts  completionItem.ts  completions.ts  constants.ts  context.ts  fetcher.ts  functions.ts  hoverProvider.ts  htmlParser.ts  linter.ts  loadScript.ts  markdown.ts  parseFunctions.ts  shdoc.ts
src/shell/html/: fetcher.ts
src/shell/providers/: completionProvider.ts  hoverProvider.ts
src/shell/test/: completion.test.ts  completionItem.test.ts  completions.test.ts  context.test.ts  debug.test.ts  fetcher.test.ts  functions.test.ts  generateMockFunctions.test.ts  getActiveMocks.test.ts  getFunctionsForContext.test.ts  hoverProvider.test.ts  isTestContext.test.ts  linter.test.ts  markdown.test.ts  mockGeneration.test.ts  parser.test.ts  (+1 more)
src/test/: contextAware.test.ts  extension.test.ts  parser.test.ts  testHelpers.ts  triggers.test.ts
(+18 files in other folders)
