[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']

[tool]
[tool.commitizen]
bump_message = 'bump(RELEASE): $current_version → $new_version'
pre_bump_hooks = ['poetry run pre-commit run --hook-stage=manual commitizen-pre-bump --files pyproject.toml -c .cicd-tools/configuration/pre-commit-bootstrap.yaml || true']
version = '0.1.0'
version_files = ['pyproject.toml:version']
version_provider = 'poetry'

[tool.poetry]
authors = ['Niall Byrne <9848926+niall-byrne@users.noreply.github.com>']
description = ''
name = 'bash-stdlib'
package-mode = false
readme = 'README.md'
version = '0.1.0'

[tool.poetry.dependencies]
python = '^3.10'

[tool.poetry.group]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
commitizen = '>=4.16.3,<5.0.0'
pre-commit = '>=4.6.0,<5.0.0'
